KMT-833 [android] Don't fail layout rendering when SecurityManager is unavailable (JDK 24+)
RenderSecurityManager.setActive() installs the layoutlib render sandbox via
System.setSecurityManager(), which throws UnsupportedOperationException on JDK 24+
(JEP 486) unless started with -Djava.security.manager=allow, breaking every render.
Guard the call and fall back to rendering without the sandbox when the runtime does
not support installing a SecurityManager (cached so it's attempted only once).


Merge-request: IJ-MR-214998
Merged-by: Mojtaba Chenani <mojtaba.chenani@jetbrains.com>

GitOrigin-RevId: 17a0c11f0fb2037a355267b288fb594529561dda